@@ -21,8 +21,7 @@ Build-Depends: autotools-dev,
                unixodbc-dev,
                zlib1g-dev,
                libgeoip-dev,
-               libmemcached-dev (>= 0.41),
-               hardening-includes
+               libmemcached-dev (>= 0.41)
 Homepage: http://www.proftpd.org/
 Vcs-Git: git://git.debian.org/pkg-proftpd/proftpd-dfsg.git
 Vcs-Browser: http://git.debian.org/?p=pkg-proftpd/proftpd-dfsg.git
@@ -41,7 +40,7 @@ Depends: adduser,
 Conflicts: ftp-server
 Breaks: proftpd (<< 1.3.2)
 Replaces: proftpd (<< 1.3.2)
-Provides: ftp-server, proftpd, proftpd-abi-1.3.5
+Provides: ftp-server, proftpd, proftpd-abi-1.3.5a
 Suggests: openbsd-inetd | inet-superserver,
           openssl,
           proftpd-doc,
