@@ -1,1 +1,1 @@
-proftpd:Depends=proftpd-abi-1.3.5 
+proftpd:Depends=proftpd-abi-1.3.5a 
